--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav>
         <header>
             <div class="center">
-            <img src="./img/dicas-de-alimentos-saudaveis-e1601556021274.jpg" alt=""></img>
+            <img src="dicas-de-alimentos-saudaveis-e1601556021274.jpg" alt=""></img>
              </div>
              <h1>SuperChef <h1>
                 <h2>Receitas Deliciosas</h2>
